--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -15,10 +15,6 @@ model:
 	# Field parameters
 #	rho = 23.9;
 #	rho = 24.;
-#	rho = 24.2;
-#	rho = 24.4;
-#	rho = 24.6;
-#	rho = 24.8;
 #	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
@@ -33,7 +29,9 @@ simulation:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
 #	LCut = 1.e6;
-	LCut = 1.e5;
+	LCut = 5.e5;
+#	LCut = 1.e5;
+#	LCut = 1.e4;
 	# Spinup duration:
  	spinup = 1.e3;
 	# Time step of integration
@@ -41,7 +39,7 @@ simulation:
  	dt = 1.e-5;
 	# Time step between prints
 	printStep = 1.e-2;
-#	printStep = 1.e-3;
+#	printStep = 1.e-4;
 	# Output file format:
  	file_format = "bin";
 #	file_format = "txt";
@@ -62,14 +60,15 @@ grid:
 	# Number of boxes in each direction and stand. dev. to span away from the mean state:
 #	nx = [10, 10, 10];	    
 #	nx = [20, 20, 20];
-	nx = [50, 50, 50];
-#	nx = [100, 100, 100];
+#	nx = [50, 50, 50];
+	nx = [100, 100, 100];
 };
 
 transfer:
 {
 	# Lags for the transition matrix:
 	tauRng = [0.01, 0.02, 0.05, 0.1, 0.5, 1.];
+#	tauRng = [0.05, 0.1];
 #	tauRng = [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1.];
 	stationary = true;
 };
@@ -92,6 +91,7 @@ stat:
 {
 	# Lag of the transition matrix for which to plot
 	tauPlot = 0.01
+#	tauPlot = 0.1
 	# Components to use as observables:
 	idxf = 0;
 	idxg = 0;
@@ -105,9 +105,10 @@ stat:
 	chunkWidth = 50;
 	# Limits for periodogram plot:
 	angFreqMax = 30.;
-	rateMax = 20;
+	rateMax = 3;
+#	rateMax = 5;
 	powerMin = 1.e-2;
 	powerMax = 1.e3;
-	maxCondition = 10
+	maxCondition = 50
 	norm = False
 };
