--- a/transfer/Makefile
+++ b/transfer/Makefile
@@ -1,4 +1,5 @@
-LIBDIR=$(HOME)/Research/dev/lib/
+INCDIR=-I$(HOME)/local/include/
+LIBDIR=-L$(HOME)/local/lib/
 LIBS=-lgsl -lconfig++ -lergopack -lgomp
 CONFIG=../cfg/readConfig
 
@@ -21,13 +22,13 @@ all:$(EXE).out
 	mkdir -p ../results/transfer/gridMem
 
 $(EXE).o:$(EXE).cpp
-	$(CC) -c $(CFLAGS) -o $@ $<
+	$(CC) -c $(CFLAGS) $(INCDIR) -o $@ $<
 
 $(CONFIG).o:$(CONFIG).cpp
-	$(CC) -c $(CFLAGS) -o $@ $<
+	$(CC) -c $(CFLAGS) $(INCDIR) -o $@ $<
 
 $(EXE).out:$(EXE).o $(CONFIG).o
-	$(CC) $(LDFLAGS) -o $@ $^ -L$(LIBDIR) $(LIBS)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBDIR) $(LIBS)
 
 clean:
 	rm -f $(EXE).o $(EXE).out
