Add binary input/output

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -29,9 +29,8 @@ simulation:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
 #	LCut = 1.e6;
-	LCut = 5.e5;
-#	LCut = 1.e5;
-#	LCut = 1.e4;
+#	LCut = 5.e5;
+	LCut = 1.e5;
 	# Spinup duration:
  	spinup = 1.e3;
 	# Time step of integration
@@ -62,13 +61,14 @@ grid:
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
 	nx = [100, 100, 100];
+#	nx = [200, 200, 200];
 };
 
 transfer:
 {
 	# Lags for the transition matrix:
-	tauRng = [0.01, 0.02, 0.05, 0.1, 0.5, 1.];
-#	tauRng = [0.05, 0.1];
+#	tauRng = [0.01, 0.02, 0.05, 0.1, 0.5, 1.];
+	tauRng = [0.01];
 #	tauRng = [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1.];
 	stationary = true;
 };
@@ -93,12 +93,12 @@ stat:
 	tauPlot = 0.01
 #	tauPlot = 0.1
 	# Components to use as observables:
-	idxf = 0;
-	idxg = 0;
+#	idxf = 0;
+#	idxg = 0;
 #	idxf = 1;
 #	idxg = 1;
-#	idxf = 2;
-#	idxg = 2;
+	idxf = 2;
+	idxg = 2;
 	# Maximum lag used to calculate the correlation function:
 	lagMax = 10;
 	# Multi-taper window used to calculate periodograms:
