--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -15,10 +15,6 @@ model:
 	# Field parameters
 #	rho = 23.9;
 #	rho = 24.;
-#	rho = 24.2;
-#	rho = 24.4;
-#	rho = 24.6;
-#	rho = 24.8;
 #	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
@@ -32,8 +28,10 @@ simulation:
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
+	LCut = 1.e7;
 #	LCut = 1.e6;
-	LCut = 1.e5;
+#	LCut = 5.e5;
+#	LCut = 1.e5;
 	# Spinup duration:
  	spinup = 1.e3;
 	# Time step of integration
@@ -62,14 +60,16 @@ grid:
 	# Number of boxes in each direction and stand. dev. to span away from the mean state:
 #	nx = [10, 10, 10];	    
 #	nx = [20, 20, 20];
-	nx = [50, 50, 50];
+#	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
+	nx = [200, 200, 200];
 };
 
 transfer:
 {
 	# Lags for the transition matrix:
-	tauRng = [0.01, 0.02, 0.05, 0.1, 0.5, 1.];
+#	tauRng = [0.01, 0.02, 0.05, 0.1, 0.5, 1.];
+	tauRng = [0.01];
 #	tauRng = [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1.];
 	stationary = true;
 };
