Allow more eigval. to get all cmplx conj pairs

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -28,9 +28,8 @@ simulation:
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
-#	LCut = 1.e6;
-#	LCut = 5.e5;
-	LCut = 1.e5;
+	LCut = 1.e6;
+#	LCut = 1.e5;
 	# Spinup duration:
  	spinup = 1.e3;
 	# Time step of integration
@@ -57,10 +56,11 @@ grid:
 	readGridMem = false;
 #	readGridMem = true;
 	# Number of boxes in each direction and stand. dev. to span away from the mean state:
-#	nx = [10, 10, 10];	    
+	nx = [10, 10, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
-	nx = [100, 100, 100];
+#	nx = [100, 100, 100];
+#	nx = [150, 150, 150];
 #	nx = [200, 200, 200];
 };
 
@@ -79,12 +79,16 @@ spectrum:
 #	nev = 10;
 	nev = 50;
 #	nev = 200;
-	nEigVecPlot = 0;
 	maxit = 1000;
 	tol = 1.e-15
 	getForwardEigenvectors = true;
 	getBackwardEigenvectors = true;
 	makeBiorthonormal = true;
+	nEigVecPlot = 0;
+	plotBackward = False
+	#plotBackward = True
+	plotImag = False     
+	#plotImag = True     
 };
 
 stat:
@@ -93,20 +97,19 @@ stat:
 	tauPlot = 0.01
 #	tauPlot = 0.1
 	# Components to use as observables:
-#	idxf = 0;
-#	idxg = 0;
+	idxf = 0;
+	idxg = 0;
 #	idxf = 1;
 #	idxg = 1;
-	idxf = 2;
-	idxg = 2;
+#	idxf = 2;
+#	idxg = 2;
 	# Maximum lag used to calculate the correlation function:
 	lagMax = 10;
 	# Multi-taper window used to calculate periodograms:
 	chunkWidth = 50;
 	# Limits for periodogram plot:
 	angFreqMax = 30.;
-	rateMax = 3;
-#	rateMax = 5;
+	rateMax = 1.5;
 	powerMin = 1.e-2;
 	powerMax = 1.e3;
 	maxCondition = 50
