--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -14,11 +14,11 @@ model:
 	dim = 3;
 	# Field parameters
 #	rho = 23.9;
-#	rho = 24.;
+	rho = 24.;
 #	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
-	rho = 28.;
+#	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -28,14 +28,9 @@ simulation:
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
-	LCut = 1.e7;
-#	LCut = 1.e6;
+	LCut = 1.e6;
 #	LCut = 5.e5;
-<<<<<<< HEAD
 #	LCut = 1.e5;
-=======
-	LCut = 1.e5;
->>>>>>> fd01e4fd1720162ee0dde431bafdd1e8ec5d14c3
 	# Spinup duration:
  	spinup = 1.e3;
 	# Time step of integration
@@ -65,13 +60,9 @@ grid:
 #	nx = [10, 10, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
-<<<<<<< HEAD
 #	nx = [100, 100, 100];
-	nx = [200, 200, 200];
-=======
-	nx = [100, 100, 100];
+	nx = [150, 150, 150];
 #	nx = [200, 200, 200];
->>>>>>> fd01e4fd1720162ee0dde431bafdd1e8ec5d14c3
 };
 
 transfer:
@@ -87,14 +78,17 @@ spectrum:
 {
 	# Number of eigenvalues to look for:
 #	nev = 10;
-	nev = 50;
-#	nev = 200;
+#	nev = 50;
+	nev = 100;
 	nEigVecPlot = 0;
 	maxit = 1000;
 	tol = 1.e-15
 	getForwardEigenvectors = true;
-	getBackwardEigenvectors = true;
-	makeBiorthonormal = true;
+#	getForwardEigenvectors = false;
+#	getBackwardEigenvectors = true;
+	getBackwardEigenvectors = false;
+#	makeBiorthonormal = true;
+	makeBiorthonormal = false;
 };
 
 stat:
@@ -103,12 +97,12 @@ stat:
 	tauPlot = 0.01
 #	tauPlot = 0.1
 	# Components to use as observables:
-#	idxf = 0;
-#	idxg = 0;
+	idxf = 0;
+	idxg = 0;
 #	idxf = 1;
 #	idxg = 1;
-	idxf = 2;
-	idxg = 2;
+#	idxf = 2;
+#	idxg = 2;
 	# Maximum lag used to calculate the correlation function:
 	lagMax = 10;
 	# Multi-taper window used to calculate periodograms:
