--- a/transfer/Makefile
+++ b/transfer/Makefile
@@ -20,6 +20,7 @@ all:$(EXE).out
 	mkdir -p ../results/transfer/initDist
 	mkdir -p ../results/transfer/finalDist
 	mkdir -p ../results/transfer/gridMem
+	mkdir -p ../results/transfer/mask
 	mkdir -p ../results/grid/
 
 $(EXE).o:$(EXE).cpp
