Debug mask usage + minor config changes

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -4,6 +4,8 @@ general:
 	resDir = "../results/";
 	specDir = "../results/spectrum/";
 	plotDir = "../results/plot/";
+ 	fileFormat = "bin";
+#	fileFormat = "txt";
 };
 
 model:	
@@ -39,8 +41,6 @@ simulation:
 	printStep = 1.e-2;
 #	printStep = 1.e-4;
 	# Output file format:
- 	file_format = "bin";
-#	file_format = "txt";
 };
 
 observable:
@@ -84,7 +84,7 @@ spectrum:
 	getForwardEigenvectors = true;
 	getBackwardEigenvectors = true;
 	makeBiorthonormal = true;
-	nEigVecPlot = 0;
+	nEigVecPlot = 3;
 	plotBackward = False
 	#plotBackward = True
 	plotImag = False     
