--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -4,6 +4,7 @@ general:
 	resDir = "../results/";
 	specDir = "../results/spectrum/";
 	plotDir = "../results/plot/";
+	# Output file format:
  	fileFormat = "bin";
 #	fileFormat = "txt";
 };
@@ -30,7 +31,7 @@ simulation:
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
-	LCut = 1.e6;
+	LCut = 1.e3;
 #	LCut = 1.e5;
 	# Spinup duration:
  	spinup = 1.e3;
@@ -40,7 +41,8 @@ simulation:
 	# Time step between prints
 	printStep = 1.e-2;
 #	printStep = 1.e-4;
-	# Output file format:
+#	seedRng = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+	seedRng = [1, 2, 3];
 };
 
 observable:
@@ -55,13 +57,19 @@ grid:
 {
 	readGridMem = false;
 #	readGridMem = true;
+	gridLimitsType = "fix";
+#	gridLimitsType = "std";
 	# Number of boxes in each direction and stand. dev. to span away from the mean state:
-	nx = [10, 10, 10];	    
+#	nx = [10, 10, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
 #	nx = [150, 150, 150];
-#	nx = [200, 200, 200];
+	nx = [200, 200, 200];
+#	nx = [250, 250, 250];
+#	nx = [300, 300, 300];
+#	nx = [350, 350, 350];
+#	nx = [400, 400, 400];
 };
 
 transfer:
@@ -77,14 +85,17 @@ spectrum:
 {
 	# Number of eigenvalues to look for:
 #	nev = 10;
-	nev = 50;
-#	nev = 200;
+#	nev = 50;
+#	nev = 100;
+	nev = 200;
 	maxit = 1000;
-	tol = 1.e-15
+	tol = 1.e-15;
 	getForwardEigenvectors = true;
+#	getForwardEigenvectors =  false;
 	getBackwardEigenvectors = true;
-	makeBiorthonormal = true;
-	nEigVecPlot = 3;
+#	getBackwardEigenvectors = false;
+	makeBiorthonormal = false;
+	nEigVecPlot = 0;
 	plotBackward = False
 	#plotBackward = True
 	plotImag = False     
@@ -97,19 +108,19 @@ stat:
 	tauPlot = 0.01
 #	tauPlot = 0.1
 	# Components to use as observables:
-	idxf = 0;
-	idxg = 0;
+#	idxf = 0;
+#	idxg = 0;
 #	idxf = 1;
 #	idxg = 1;
-#	idxf = 2;
-#	idxg = 2;
+	idxf = 2;
+	idxg = 2;
 	# Maximum lag used to calculate the correlation function:
 	lagMax = 10;
 	# Multi-taper window used to calculate periodograms:
 	chunkWidth = 50;
 	# Limits for periodogram plot:
 	angFreqMax = 30.;
-	rateMax = 1.5;
+	rateMax = 2.;
 	powerMin = 1.e-2;
 	powerMax = 1.e3;
 	maxCondition = 50
