--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,11 +16,11 @@ model:
 	dim = 3;
 	# Field parameters
 #	rho = 23.9;
-	rho = 24.;
+#	rho = 24.;
 #	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
-#	rho = 28.;
+	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -61,7 +61,11 @@ grid:
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
 #	nx = [150, 150, 150];
-	nx = [200, 200, 200];
+#	nx = [200, 200, 200];
+#	nx = [250, 250, 250];
+#	nx = [300, 300, 300];
+#	nx = [350, 350, 350];
+	nx = [400, 400, 400];
 };
 
 transfer:
@@ -77,22 +81,17 @@ spectrum:
 {
 	# Number of eigenvalues to look for:
 #	nev = 50;
-	nev = 100;
+#	nev = 100;
+	nev = 200;
 	maxit = 1000;
 	tol = 1.e-15
-	getForwardEigenvectors = true;
-<<<<<<< HEAD
-#	getForwardEigenvectors = false;
-#	getBackwardEigenvectors = true;
-	getBackwardEigenvectors = False;
+#	getForwardEigenvectors = true;
+#	getBackwardEigenvectors = False;
+	getForwardEigenvectors = false;
+	getBackwardEigenvectors = true;
 #	makeBiorthonormal = true;
 	makeBiorthonormal = false;
 	nEigVecPlot = 0;
-=======
-	getBackwardEigenvectors = true;
-	makeBiorthonormal = true;
-	nEigVecPlot = 3;
->>>>>>> 248186c555f4cafd0e2ac59347a664f9318ba950
 	plotBackward = False
 	#plotBackward = True
 	plotImag = False     
