--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -5,8 +5,8 @@ general:
 	specDir = "../results/spectrum/";
 	plotDir = "../results/plot/";
 	# Output file format:
- 	fileFormat = "bin";
-#	fileFormat = "txt";
+ 	#fileFormat = "bin";
+	fileFormat = "txt";
 };
 
 model:	
@@ -26,23 +26,50 @@ model:
 	beta = 2.6666666666666665;
 };
 
+continuation:
+{
+	epsDist = 1.e-10;
+	epsStepCorrSize = 1.e-8;
+	maxIter = 1000;
+	numShoot = 1;
+	#contStep = 0.01;
+	#contStep = -0.01;
+	#contStep = 0.001;
+	#contStep = -0.001;
+	contStep = -0.0001;
+	contMin = 0.;
+	contMax = 30.;
+	#verbose = true;
+	verbose = false;
+	# Periodic orbit correction for sigma = 0.8
+	#initCont = [1.903806, 0.893549, -3.889728, -0.097373, 75.];
+	# Fixed point at origin continuation
+	#initCont = [0., 0., 0., 0.];
+	# Asymmetric fixed point continuation
+	#initCont = [1.6329, 1.6329, 1., 2.];
+	# Periodic orbit continuation from Hopf bifurcation of upper pitchfork branch
+	#initCont = [7.956126, 7.956126, 24.737477, 24.5, 0.652822];
+	# Periodic orbit continuation close to homoclinic bifurcation
+	initCont = [10.33683, 6.022949, 23.479173, 15.477484, 1.415303];
+};
+
 simulation:
 {
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
-	LCut = 1.e3;
-#	LCut = 1.e5;
+#	LCut = 1.e6;
+	LCut = 1.e5;
 	# Spinup duration:
  	spinup = 1.e3;
 	# Time step of integration
-# 	dt = 1.e-4;
+ 	#dt = 1.e-4;
  	dt = 1.e-5;
 	# Time step between prints
 	printStep = 1.e-2;
 #	printStep = 1.e-4;
-#	seedRng = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
-	seedRng = [1, 2, 3];
+	seedRng = [1, 2, 3, 4, 5];
+#	seedRng = [1];
 };
 
 observable:
@@ -65,11 +92,13 @@ grid:
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
 #	nx = [150, 150, 150];
-	nx = [200, 200, 200];
+#	nx = [200, 200, 200];
 #	nx = [250, 250, 250];
-#	nx = [300, 300, 300];
+	nx = [300, 300, 300];
 #	nx = [350, 350, 350];
 #	nx = [400, 400, 400];
+#	nx = [450, 450, 450];
+#	nx = [500, 500, 500];
 };
 
 transfer:
@@ -84,10 +113,9 @@ transfer:
 spectrum:
 {
 	# Number of eigenvalues to look for:
-#	nev = 10;
-#	nev = 50;
 #	nev = 100;
-	nev = 200;
+#	nev = 200;
+	nev = 300;
 	maxit = 1000;
 	tol = 1.e-15;
 	getForwardEigenvectors = true;
@@ -95,7 +123,7 @@ spectrum:
 	getBackwardEigenvectors = true;
 #	getBackwardEigenvectors = false;
 	makeBiorthonormal = false;
-	nEigVecPlot = 0;
+	nEigVecPlot = 1;
 	plotBackward = False
 	#plotBackward = True
 	plotImag = False     
@@ -108,20 +136,18 @@ stat:
 	tauPlot = 0.01
 #	tauPlot = 0.1
 	# Components to use as observables:
-#	idxf = 0;
-#	idxg = 0;
-#	idxf = 1;
-#	idxg = 1;
-	idxf = 2;
-	idxg = 2;
+	idxf = 0;
+	idxg = 0;
+#	idxf = 2;
+#	idxg = 2;
 	# Maximum lag used to calculate the correlation function:
 	lagMax = 10;
 	# Multi-taper window used to calculate periodograms:
-	chunkWidth = 50;
+	chunkWidth = 100;
 	# Limits for periodogram plot:
-	angFreqMax = 30.;
+	angFreqMax = 40.;
 	rateMax = 2.;
-	powerMin = 1.e-2;
+	powerMin = 1.e-3;
 	powerMax = 1.e3;
 	maxCondition = 50
 	norm = False
