Add Covariant Lyapunov Vectors

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -5,8 +5,8 @@ general:
 	specDir = "../results/spectrum/";
 	plotDir = "../results/plot/";
 	# Output file format:
- 	#fileFormat = "bin";
-	fileFormat = "txt";
+ 	fileFormat = "bin";
+	#fileFormat = "txt";
 };
 
 model:	
@@ -18,10 +18,10 @@ model:
 	# Field parameters
 #	rho = 23.9;
 #	rho = 24.;
-#	rho = 25.;
+	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
-	rho = 28.;
+#	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -60,12 +60,15 @@ simulation:
 	# Time series length without spinup
 #	LCut = 1.e6;
 	LCut = 1.e5;
+#	LCut = 1.e4;
 	# Spinup duration:
  	spinup = 1.e3;
 	# Time step of integration
- 	#dt = 1.e-4;
- 	dt = 1.e-5;
+	#dt = 1.e-3;
+	#dt = 1.e-4;
+	dt = 1.e-5;
 	# Time step between prints
+#	printStep = 1.e-1;
 	printStep = 1.e-2;
 #	printStep = 1.e-4;
 	seedRng = [1, 2, 3, 4, 5];
