Add sim sprinkled + transfer

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,41 +16,15 @@ model:
 	# Dimension of the model (time series):
 	dim = 3;
 	# Field parameters
+	rho = 24.0577
 #	rho = 23.9;
 #	rho = 24.;
-	rho = 25.;
+#	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
 #	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
-};
-
-continuation:
-{
-	epsDist = 1.e-10;
-	epsStepCorrSize = 1.e-8;
-	maxIter = 1000;
-	numShoot = 1;
-	#contStep = 0.01;
-	#contStep = -0.01;
-	#contStep = 0.001;
-	#contStep = -0.001;
-	contStep = -0.0001;
-	contMin = 0.;
-	contMax = 30.;
-	#verbose = true;
-	verbose = false;
-	# Periodic orbit correction for sigma = 0.8
-	#initCont = [1.903806, 0.893549, -3.889728, -0.097373, 75.];
-	# Fixed point at origin continuation
-	#initCont = [0., 0., 0., 0.];
-	# Asymmetric fixed point continuation
-	#initCont = [1.6329, 1.6329, 1., 2.];
-	# Periodic orbit continuation from Hopf bifurcation of upper pitchfork branch
-	#initCont = [7.956126, 7.956126, 24.737477, 24.5, 0.652822];
-	# Periodic orbit continuation close to homoclinic bifurcation
-	initCont = [10.33683, 6.022949, 23.479173, 15.477484, 1.415303];
 };
 
 simulation:
@@ -59,10 +33,12 @@ simulation:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
 #	LCut = 1.e6;
-	LCut = 1.e5;
+#	LCut = 1.e5;
 #	LCut = 1.e4;
+	LCut = 1.e-2;
 	# Spinup duration:
- 	spinup = 1.e3;
+# 	spinup = 1.e3;
+ 	spinup = 0.;
 	# Time step of integration
 	#dt = 1.e-3;
 	#dt = 1.e-4;
@@ -71,8 +47,17 @@ simulation:
 #	printStep = 1.e-1;
 	printStep = 1.e-2;
 #	printStep = 1.e-4;
-	seedRng = [1, 2, 3, 4, 5];
-#	seedRng = [1];
+};
+
+sprinkle:
+{
+	nTraj = 1000000;
+	#nTraj = 10000000;
+	#nTraj = 100000000;
+	#nTraj = 2000000000;
+	minInitState = [-20., -30., -0.001];
+	maxInitState = [20., 30., 50.];
+	seedRng = [1];
 };
 
 observable:
@@ -90,14 +75,14 @@ grid:
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
 	# Number of boxes in each direction and stand. dev. to span away from the mean state:
-#	nx = [10, 10, 10];	    
+	nx = [10, 10, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
 #	nx = [150, 150, 150];
 #	nx = [200, 200, 200];
 #	nx = [250, 250, 250];
-	nx = [300, 300, 300];
+#	nx = [300, 300, 300];
 #	nx = [350, 350, 350];
 #	nx = [400, 400, 400];
 #	nx = [450, 450, 450];
@@ -154,4 +139,32 @@ stat:
 	powerMax = 1.e3;
 	maxCondition = 50
 	norm = False
+};
+
+continuation:
+{
+	epsDist = 1.e-10;
+	epsStepCorrSize = 1.e-8;
+	maxIter = 1000;
+	numShoot = 1;
+	#contStep = 0.01;
+	#contStep = -0.01;
+	#contStep = 0.001;
+	contStep = -0.001;
+	#contStep = -0.0001;
+#	contMin = 0.;
+	contMin = 15.;
+	contMax = 30.;
+	#verbose = true;
+	verbose = false;
+	# Periodic orbit correction for sigma = 0.8
+	#initCont = [1.903806, 0.893549, -3.889728, -0.097373, 75.];
+	# Fixed point at origin continuation
+	#initCont = [0., 0., 0., 0.];
+	# Asymmetric fixed point continuation
+	#initCont = [1.6329, 1.6329, 1., 2.];
+	# Periodic orbit continuation from Hopf bifurcation of upper pitchfork branch
+	#initCont = [7.956126, 7.956126, 24.737477, 24.5, 0.652822];
+	# Periodic orbit continuation close to homoclinic bifurcation
+	initCont = [10.33683, 6.022949, 23.479173, 15.477484, 1.415303];
 };
