Commit before to Fetch

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -18,10 +18,10 @@ model:
 	# Field parameters
 #	rho = 23.9;
 #	rho = 24.;
-#	rho = 25.;
+	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
-	rho = 28.;
+#	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -31,7 +31,7 @@ simulation:
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
-	LCut = 1.e3;
+	LCut = 1.e6;
 #	LCut = 1.e5;
 	# Spinup duration:
  	spinup = 1.e3;
@@ -41,8 +41,8 @@ simulation:
 	# Time step between prints
 	printStep = 1.e-2;
 #	printStep = 1.e-4;
-#	seedRng = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
-	seedRng = [1, 2, 3];
+	seedRng = [1, 2, 3, 4, 5];
+#	seedRng = [10];
 };
 
 observable:
@@ -65,19 +65,13 @@ grid:
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
 #	nx = [150, 150, 150];
-<<<<<<< HEAD
 #	nx = [200, 200, 200];
 #	nx = [250, 250, 250];
-#	nx = [300, 300, 300];
-#	nx = [350, 350, 350];
-	nx = [400, 400, 400];
-=======
-	nx = [200, 200, 200];
-#	nx = [250, 250, 250];
-#	nx = [300, 300, 300];
+	nx = [300, 300, 300];
 #	nx = [350, 350, 350];
 #	nx = [400, 400, 400];
->>>>>>> 3e9281e2d3af6bb334d9b98b492b26edd2d8c143
+#	nx = [450, 450, 450];
+#	nx = [500, 500, 500];
 };
 
 transfer:
@@ -92,28 +86,16 @@ transfer:
 spectrum:
 {
 	# Number of eigenvalues to look for:
-<<<<<<< HEAD
-=======
-#	nev = 10;
->>>>>>> 3e9281e2d3af6bb334d9b98b492b26edd2d8c143
-#	nev = 50;
 #	nev = 100;
-	nev = 200;
+#	nev = 200;
+	nev = 300;
 	maxit = 1000;
-<<<<<<< HEAD
-	tol = 1.e-15
-#	getForwardEigenvectors = true;
-#	getBackwardEigenvectors = False;
-	getForwardEigenvectors = false;
-	getBackwardEigenvectors = true;
-#	makeBiorthonormal = true;
-=======
 	tol = 1.e-15;
 	getForwardEigenvectors = true;
-#	getForwardEigenvectors =  false;
-	getBackwardEigenvectors = true;
-#	getBackwardEigenvectors = false;
->>>>>>> 3e9281e2d3af6bb334d9b98b492b26edd2d8c143
+	getBackwardEigenvectors = False;
+#	getForwardEigenvectors = false;
+#	getBackwardEigenvectors = true;
+#	makeBiorthonormal = true;
 	makeBiorthonormal = false;
 	nEigVecPlot = 0;
 	plotBackward = False
