--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,13 +16,13 @@ model:
 	# Dimension of the model (time series):
 	dim = 3;
 	# Field parameters
-	rho = 24.0577
+#	rho = 24.0577
 #	rho = 23.9;
 #	rho = 24.;
-	rho = 25.;
+#	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
-#	rho = 28.;
+	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -32,11 +32,7 @@ simulation:
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
-<<<<<<< HEAD
-	LCut = 1.e6;
-=======
 #	LCut = 1.e6;
->>>>>>> 753572aebb1cc5164212e76d5de8decc47e5d291
 #	LCut = 1.e5;
 #	LCut = 1.e4;
 	LCut = 1.e-2;
@@ -45,28 +41,23 @@ simulation:
  	spinup = 0.;
 	# Time step of integration
 	#dt = 1.e-3;
-	#dt = 1.e-4;
-	dt = 1.e-5;
+	dt = 1.e-4;
+	#dt = 1.e-5;
 	# Time step between prints
 #	printStep = 1.e-1;
 	printStep = 1.e-2;
 #	printStep = 1.e-4;
-<<<<<<< HEAD
-	seedRng = [1, 2, 3, 4, 5];
-#	seedRng = [10];
-=======
 };
 
 sprinkle:
 {
-	nTraj = 1000000;
+	#nTraj = 1000000;
 	#nTraj = 10000000;
-	#nTraj = 100000000;
+	nTraj = 100000000;
 	#nTraj = 2000000000;
 	minInitState = [-20., -30., -0.001];
 	maxInitState = [20., 30., 50.];
 	seedRng = [1];
->>>>>>> 753572aebb1cc5164212e76d5de8decc47e5d291
 };
 
 observable:
@@ -84,8 +75,8 @@ grid:
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
 	# Number of boxes in each direction and stand. dev. to span away from the mean state:
-	nx = [10, 10, 10];	    
-#	nx = [20, 20, 20];
+#	nx = [10, 10, 10];	    
+#	nx = [25, 25, 25];
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
 #	nx = [150, 150, 150];
@@ -101,18 +92,17 @@ grid:
 transfer:
 {
 	# Lags for the transition matrix:
-#	tauRng = [0.01, 0.02, 0.05, 0.1, 0.5, 1.];
 	tauRng = [0.01];
-#	tauRng = [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1.];
 	stationary = true;
 };
 
 spectrum:
 {
 	# Number of eigenvalues to look for:
-#	nev = 100;
+#	nev = 50;
+	nev = 100;
 #	nev = 200;
-	nev = 300;
+#	nev = 300;
 	maxit = 1000;
 	tol = 1.e-15;
 	getForwardEigenvectors = true;
@@ -131,8 +121,7 @@ spectrum:
 stat:
 {
 	# Lag of the transition matrix for which to plot
-	tauPlot = 0.01
-#	tauPlot = 0.1
+	tauPlot = 0.01;
 	# Components to use as observables:
 	idxf = 0;
 	idxg = 0;
@@ -147,8 +136,8 @@ stat:
 	rateMax = 2.;
 	powerMin = 1.e-3;
 	powerMax = 1.e3;
-	maxCondition = 50
-	norm = False
+	maxCondition = 50;
+	norm = False;
 };
 
 continuation:
