--- a/spectrum/Makefile
+++ b/spectrum/Makefile
@@ -12,7 +12,8 @@ LDFLAGSGDB=$(LDFLAGSSTD) -gdb
 LDFLAGS=$(LDFLAGSSTD)
 #LDFLAGS=$(LDFLAGSGDB)
 
-EXE=spectrum
+#EXE=spectrum
+EXE=spectrumSprinkle
 
 all:$(EXE).out
 	mkdir -p ../results/spectrum/eigval
