Use spherical coordinates adapted to Lyapunov

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,13 +16,13 @@ model:
 	# Dimension of the model (time series):
 	dim = 3;
 	# Field parameters
-	rho = 24.0577
+#	rho = 24.0577
 #	rho = 23.9;
 #	rho = 24.;
 #	rho = 25.;
 #	rho = 26.;
 #	rho = 27.;
-#	rho = 28.;
+	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -41,8 +41,8 @@ simulation:
  	spinup = 0.;
 	# Time step of integration
 	#dt = 1.e-3;
-	#dt = 1.e-4;
-	dt = 1.e-5;
+	dt = 1.e-4;
+	#dt = 1.e-5;
 	# Time step between prints
 #	printStep = 1.e-1;
 	printStep = 1.e-2;
@@ -51,12 +51,15 @@ simulation:
 
 sprinkle:
 {
-	nTraj = 1000000;
+	#nTraj = 100000;
 	#nTraj = 10000000;
 	#nTraj = 100000000;
-	#nTraj = 2000000000;
-	minInitState = [-20., -30., -0.001];
-	maxInitState = [20., 30., 50.];
+	nTraj = 2000000000;
+	#minInitState = [-20., -30., -0.001];
+	#maxInitState = [20., 30., 50.];
+	# Spherical coordinates
+	minInitState = [0., 0., -3.141592653589793];
+	maxInitState = [1., 3.141592653589793, 3.141592653589793];
 	seedRng = [1];
 };
 
@@ -74,8 +77,8 @@ grid:
 #	readGridMem = true;
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
-	# Number of boxes in each direction and stand. dev. to span away from the mean state:
-	nx = [10, 10, 10];	    
+	# Number of boxes in each direction:
+	nx = [10, 5, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
@@ -101,9 +104,9 @@ transfer:
 spectrum:
 {
 	# Number of eigenvalues to look for:
-#	nev = 100;
+	nev = 100;
 #	nev = 200;
-	nev = 300;
+#	nev = 300;
 	maxit = 1000;
 	tol = 1.e-15;
 	getForwardEigenvectors = true;
