--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,13 +16,15 @@ model:
 	# Dimension of the model (time series):
 	dim = 3;
 	# Field parameters
-#	rho = 24.0577
-#	rho = 23.9;
+	rho = 14.;
+#	rho = 15.;
+#	rho = 17.;
+#	rho = 20.;
+#	rho = 23.;
 #	rho = 24.;
 #	rho = 25.;
 #	rho = 26.;
-#	rho = 27.;
-	rho = 28.;
+#	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -78,11 +80,11 @@ grid:
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
 	# Number of boxes in each direction:
-	nx = [10, 5, 10];	    
+#	nx = [10, 5, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
-#	nx = [150, 150, 150];
+	nx = [160, 80, 160];
 #	nx = [200, 200, 200];
 #	nx = [250, 250, 250];
 #	nx = [300, 300, 300];
@@ -104,7 +106,7 @@ transfer:
 spectrum:
 {
 	# Number of eigenvalues to look for:
-	nev = 100;
+	nev = 50;
 #	nev = 200;
 #	nev = 300;
 	maxit = 1000;
@@ -137,7 +139,8 @@ stat:
 	chunkWidth = 100;
 	# Limits for periodogram plot:
 	angFreqMax = 40.;
-	rateMax = 2.;
+#	rateMax = 2.;
+	rateMax = 2.5;
 	powerMin = 1.e-3;
 	powerMax = 1.e3;
 	maxCondition = 50
@@ -155,8 +158,8 @@ continuation:
 	#contStep = 0.001;
 	contStep = -0.001;
 	#contStep = -0.0001;
-#	contMin = 0.;
-	contMin = 15.;
+	contMin = 0.;
+#	contMin = 15.;
 	contMax = 30.;
 	#verbose = true;
 	verbose = false;
