--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,9 +16,18 @@ model:
 	# Dimension of the model (time series):
 	dim = 3;
 	# Field parameters
-	rho = 14.;
-#	rho = 15.;
-#	rho = 17.;
+#	rho = 0.;
+#	rho = 1.;
+#	rho = 2.;
+#	rho = 5.;
+#	rho = 10.;
+#	rho = 11.;
+#	rho = 12.;
+#	rho = 13.;
+#	rho = 14.;
+	rho = 15.;
+#	rho = 16.;
+#	rho = 18.;
 #	rho = 20.;
 #	rho = 23.;
 #	rho = 24.;
@@ -43,7 +52,8 @@ simulation:
  	spinup = 0.;
 	# Time step of integration
 	#dt = 1.e-3;
-	dt = 1.e-4;
+	dt = 2.e-4;
+	#dt = 1.e-4;
 	#dt = 1.e-5;
 	# Time step between prints
 #	printStep = 1.e-1;
@@ -84,29 +94,23 @@ grid:
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
-	nx = [160, 80, 160];
-#	nx = [200, 200, 200];
-#	nx = [250, 250, 250];
-#	nx = [300, 300, 300];
-#	nx = [350, 350, 350];
-#	nx = [400, 400, 400];
-#	nx = [450, 450, 450];
-#	nx = [500, 500, 500];
+#	nx = [160, 80, 160];
+	nx = [200, 100, 200];
 };
 
 transfer:
 {
 	# Lags for the transition matrix:
-#	tauRng = [0.01, 0.02, 0.05, 0.1, 0.5, 1.];
-	tauRng = [0.01];
-#	tauRng = [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1.];
+	#tauRng = [0.01];
+	tauRng = [0.05];
 	stationary = true;
 };
 
 spectrum:
 {
 	# Number of eigenvalues to look for:
-	nev = 50;
+#	nev = 50;
+	nev = 100;
 #	nev = 200;
 #	nev = 300;
 	maxit = 1000;
@@ -139,8 +143,9 @@ stat:
 	chunkWidth = 100;
 	# Limits for periodogram plot:
 	angFreqMax = 40.;
-#	rateMax = 2.;
-	rateMax = 2.5;
+	#rateMax = 1.5;
+	#rateMax = 2.5;
+	rateMax = 5.;
 	powerMin = 1.e-3;
 	powerMax = 1.e3;
 	maxCondition = 50
@@ -156,10 +161,9 @@ continuation:
 	#contStep = 0.01;
 	#contStep = -0.01;
 	#contStep = 0.001;
-	contStep = -0.001;
-	#contStep = -0.0001;
+	#contStep = -0.001;
+	contStep = -0.0001;
 	contMin = 0.;
-#	contMin = 15.;
 	contMax = 30.;
 	#verbose = true;
 	verbose = false;
@@ -172,5 +176,7 @@ continuation:
 	# Periodic orbit continuation from Hopf bifurcation of upper pitchfork branch
 	#initCont = [7.956126, 7.956126, 24.737477, 24.5, 0.652822];
 	# Periodic orbit continuation close to homoclinic bifurcation
-	initCont = [10.33683, 6.022949, 23.479173, 15.477484, 1.415303];
+	#initCont = [10.33683, 6.022949, 23.479173, 15.477484, 1.415303];
+	# Periodic orbit continuation very close to homoclinic bifurcation
+	initCont = [10.13256, 6.091872, 21.884318, 14.105718, 2.231300];
 };
