--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,8 +16,19 @@ model:
 	# Dimension of the model (time series):
 	dim = 3;
 	# Field parameters
+#	rho = 0.;
+#	rho = 1.;
+#	rho = 2.;
+#	rho = 5.;
+#	rho = 7.5;
+#	rho = 10.;
+#	rho = 11.;
+#	rho = 12.;
+#	rho = 13.;
+#	rho = 13.5;
+#	rho = 13.75;
 #	rho = 14.;
-#	rho = 15.;
+	rho = 15.;
 #	rho = 16.;
 #	rho = 18.;
 #	rho = 20.;
@@ -26,7 +37,7 @@ model:
 #	rho = 24.;
 #	rho = 25.;
 #	rho = 26.;
-	rho = 28.;
+#	rho = 28.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -45,6 +56,7 @@ simulation:
  	spinup = 0.;
 	# Time step of integration
 	#dt = 1.e-3;
+	#dt = 2.e-4;
 	dt = 1.e-4;
 	#dt = 1.e-5;
 	# Time step between prints
@@ -55,10 +67,10 @@ simulation:
 
 sprinkle:
 {
-	nTraj = 1000000;
+	#nTraj = 1000000;
 	#nTraj = 10000000;
 	#nTraj = 100000000;
-	#nTraj = 2000000000;
+	nTraj = 2000000000;
 	#minInitState = [-20., -30., -0.001];
 	#maxInitState = [20., 30., 50.];
 	# Spherical coordinates
@@ -82,26 +94,31 @@ grid:
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
 	# Number of boxes in each direction:
-	nx = [10, 5, 10];	    
+#	nx = [10, 5, 10];	    
 #	nx = [20, 10, 20];
 #	nx = [50, 25, 50];
 #	nx = [100, 50, 100];
 #	nx = [80, 40, 80];
 #	nx = [160, 80, 160];
-#	nx = [200, 100, 200];
+	nx = [200, 100, 200];
+#	nx = [300, 150, 300];
+#	nx = [400, 200, 400];
+#	nx = [300, 200, 400];
 };
 
 transfer:
 {
 	# Lags for the transition matrix:
-	tauRng = [0.01];
+#	tauRng = [0.01];
+	tauRng = [0.05];
 	stationary = true;
 };
 
 spectrum:
 {
 	# Number of eigenvalues to look for:
-	nev = 50;
+#	nev = 50;
+	nev = 100;
 #	nev = 200;
 #	nev = 300;
 	maxit = 1000;
