--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -20,20 +20,39 @@ model:
 #	rho = 1.;
 #	rho = 2.;
 #	rho = 5.;
+#	rho = 7.5;
 #	rho = 10.;
 #	rho = 11.;
 #	rho = 12.;
 #	rho = 13.;
+#	rho = 13.5;
+#	rho = 13.75;
 #	rho = 14.;
-	rho = 15.;
+#	rho = 15.;
 #	rho = 16.;
 #	rho = 18.;
+#	rho = 19.;
+#	rho = 19.5;
 #	rho = 20.;
+#	rho = 20.5;
+#	rho = 21.;
+#	rho = 21.25;
+#	rho = 21.5;
+#	rho = 21.75;
+#	rho = 22.;
+#	rho = 22.25;
+#	rho = 22.5;
+#	rho = 22.75;
 #	rho = 23.;
+#	rho = 23.25;
+#	rho = 23.5;
+#	rho = 23.75;
 #	rho = 24.;
+#	rho = 24.25;
+#	rho = 24.5;
+#	rho = 24.75;
 #	rho = 25.;
-#	rho = 26.;
-#	rho = 28.;
+	rho = 26.;
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -51,8 +70,8 @@ simulation:
 # 	spinup = 1.e3;
  	spinup = 0.;
 	# Time step of integration
-	#dt = 1.e-3;
-	dt = 2.e-4;
+	dt = 1.e-3;
+	#dt = 2.e-4;
 	#dt = 1.e-4;
 	#dt = 1.e-5;
 	# Time step between prints
@@ -102,7 +121,8 @@ transfer:
 {
 	# Lags for the transition matrix:
 	#tauRng = [0.01];
-	tauRng = [0.05];
+	#tauRng = [0.05];
+	tauRng = [0.1];
 	stationary = true;
 };
 
@@ -110,7 +130,8 @@ spectrum:
 {
 	# Number of eigenvalues to look for:
 #	nev = 50;
-	nev = 100;
+#	nev = 100;
+	nev = 150;
 #	nev = 200;
 #	nev = 300;
 	maxit = 1000;
@@ -143,9 +164,9 @@ stat:
 	chunkWidth = 100;
 	# Limits for periodogram plot:
 	angFreqMax = 40.;
-	#rateMax = 1.5;
-	#rateMax = 2.5;
-	rateMax = 5.;
+	rateMax = 1.;
+	#rateMax = 2.;
+	#rateMax = 5.;
 	powerMin = 1.e-3;
 	powerMax = 1.e3;
 	maxCondition = 50
