Anasazi spectrum + plots

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -5,7 +5,7 @@ general:
 	specDir = "../results/spectrum/";
 	plotDir = "../results/plot/";
 	# Output file format:
- 	fileFormat = "bin";
+	fileFormat = "bin";
 	#fileFormat = "txt";
 };
 
@@ -52,7 +52,9 @@ model:
 #	rho = 24.5;
 #	rho = 24.75;
 #	rho = 25.;
-	rho = 26.;
+#	rho = 26.;
+#	rho = 27.;
+	rho = 28.;	
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -63,17 +65,17 @@ simulation:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
 #	LCut = 1.e6;
-#	LCut = 1.e5;
+	LCut = 1.e5;
 #	LCut = 1.e4;
-	LCut = 1.e-2;
+#	LCut = 1.e-2;
 	# Spinup duration:
-# 	spinup = 1.e3;
- 	spinup = 0.;
+ 	spinup = 1.e3;
+# 	spinup = 0.;
 	# Time step of integration
-	dt = 1.e-3;
-	#dt = 2.e-4;
-	#dt = 1.e-4;
-	#dt = 1.e-5;
+#	dt = 1.e-3;
+#	dt = 2.e-4;
+#	dt = 1.e-4;
+	dt = 1.e-5;
 	# Time step between prints
 #	printStep = 1.e-1;
 	printStep = 1.e-2;
@@ -82,10 +84,10 @@ simulation:
 
 sprinkle:
 {
-	#nTraj = 100000;
+	nTraj = 100000;
 	#nTraj = 10000000;
 	#nTraj = 100000000;
-	nTraj = 2000000000;
+	#nTraj = 2000000000;
 	#minInitState = [-20., -30., -0.001];
 	#maxInitState = [20., 30., 50.];
 	# Spherical coordinates
@@ -109,29 +111,29 @@ grid:
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
 	# Number of boxes in each direction:
-#	nx = [10, 5, 10];	    
+	nx = [10, 5, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
 #	nx = [100, 100, 100];
 #	nx = [160, 80, 160];
-	nx = [200, 100, 200];
+#	nx = [200, 100, 200];
 };
 
 transfer:
 {
 	# Lags for the transition matrix:
-	#tauRng = [0.01];
+	tauRng = [0.01];
 	#tauRng = [0.05];
-	tauRng = [0.1];
+	#tauRng = [0.1];
 	stationary = true;
 };
 
 spectrum:
 {
 	# Number of eigenvalues to look for:
-#	nev = 50;
+	nev = 50;
 #	nev = 100;
-	nev = 150;
+#	nev = 150;
 #	nev = 200;
 #	nev = 300;
 	maxit = 1000;
