simTransferSpectrum with MPI

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -52,9 +52,9 @@ model:
 #	rho = 24.5;
 #	rho = 24.75;
 #	rho = 25.;
-#	rho = 26.;
+	rho = 26.;
 #	rho = 27.;
-	rho = 28.;	
+#	rho = 28.;	
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -122,8 +122,8 @@ grid:
 transfer:
 {
 	# Lags for the transition matrix:
-	tauRng = [0.01];
-	#tauRng = [0.05];
+	#tauRng = [0.01];
+	tauRng = [0.05];
 	#tauRng = [0.1];
 	stationary = true;
 };
@@ -138,10 +138,10 @@ spectrum:
 #	nev = 300;
 	maxit = 1000;
 	tol = 1.e-15;
-	getForwardEigenvectors = true;
-#	getForwardEigenvectors =  false;
-	getBackwardEigenvectors = true;
-#	getBackwardEigenvectors = false;
+#	getForwardEigenvectors = true;
+	getForwardEigenvectors =  false;
+#	getBackwardEigenvectors = true;
+	getBackwardEigenvectors = false;
 	makeBiorthonormal = false;
 	nEigVecPlot = 1;
 	plotBackward = False
@@ -153,7 +153,7 @@ spectrum:
 stat:
 {
 	# Lag of the transition matrix for which to plot
-	tauPlot = 0.01
+	tauPlot = 0.05
 #	tauPlot = 0.1
 	# Components to use as observables:
 	idxf = 0;
