Simulation for several trajectories

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -40,19 +40,14 @@ model:
 #	rho = 21.5;
 #	rho = 21.75;
 #	rho = 22.;
-#	rho = 22.25;
 #	rho = 22.5;
-#	rho = 22.75;
 #	rho = 23.;
-#	rho = 23.25;
 #	rho = 23.5;
-#	rho = 23.75;
-#	rho = 24.;
-#	rho = 24.25;
+	rho = 24.;
 #	rho = 24.5;
-#	rho = 24.75;
 #	rho = 25.;
-	rho = 26.;
+#	rho = 25.5;
+#	rho = 26.;
 #	rho = 27.;
 #	rho = 28.;	
 	sigma = 10.;
@@ -65,29 +60,31 @@ simulation:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
 #	LCut = 1.e6;
-	LCut = 1.e5;
-#	LCut = 1.e4;
+#	LCut = 1.e5;
+	LCut = 1.e3;
 #	LCut = 1.e-2;
 	# Spinup duration:
  	spinup = 1.e3;
 # 	spinup = 0.;
 	# Time step of integration
-#	dt = 1.e-3;
-#	dt = 2.e-4;
-#	dt = 1.e-4;
-	dt = 1.e-5;
+	dt = 1.e-4;
+#	dt = 1.e-5;
 	# Time step between prints
-#	printStep = 1.e-1;
 	printStep = 1.e-2;
-#	printStep = 1.e-4;
 };
 
 sprinkle:
 {
-	nTraj = 10000;
-	#nTraj = 10000000;
-	#nTraj = 100000000;
-	#nTraj = 2000000000;
+	nTraj = 32;
+#	nTraj = 10000;
+#	nProc = 1;
+#	nTraj = 1000000000;
+#	nProc = 32;
+#	nTraj = 50000000;
+#	nTraj = 100000000;
+#	nTraj = 500000000;
+#	nTraj = 1000000000;
+	nProc = 64;
 	#minInitState = [-20., -30., -0.001];
 	#maxInitState = [20., 30., 50.];
 	# Spherical coordinates
@@ -111,35 +108,37 @@ grid:
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
 	# Number of boxes in each direction:
-	nx = [10, 5, 10];	    
+#	nx = [10, 5, 10];	    
 #	nx = [20, 20, 20];
 #	nx = [50, 50, 50];
-#	nx = [100, 100, 100];
-#	nx = [160, 80, 160];
+#	nx = [100, 50, 100];
 #	nx = [200, 100, 200];
+#	nx = [300, 150, 300];
+	nx = [400, 200, 400];
+#	nx = [500, 250, 500];
 };
 
 transfer:
 {
 	# Lags for the transition matrix:
-	#tauRng = [0.01];
+#	tauRng = [0.01];
 	tauRng = [0.05];
-	#tauRng = [0.1];
+#	tauRng = [0.1];
 	stationary = true;
 };
 
 spectrum:
 {
 	# Number of eigenvalues to look for:
-	nev = 50;
+#	nev = 50;
 #	nev = 100;
 #	nev = 150;
-#	nev = 200;
+	nev = 200;
 #	nev = 300;
 	maxit = 1000;
 	tol = 1.e-15;
-#	getForwardEigenvectors = true;
-	getForwardEigenvectors =  false;
+	getForwardEigenvectors = true;
+#	getForwardEigenvectors =  false;
 #	getBackwardEigenvectors = true;
 	getBackwardEigenvectors = false;
 	makeBiorthonormal = false;
@@ -166,9 +165,9 @@ stat:
 	chunkWidth = 100;
 	# Limits for periodogram plot:
 	angFreqMax = 40.;
-	rateMax = 1.;
+	rateMax = 0.6;
 	#rateMax = 2.;
-	#rateMax = 5.;
+	#rateMax = 10.;
 	powerMin = 1.e-3;
 	powerMax = 1.e3;
 	maxCondition = 50
