--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -5,6 +5,7 @@ CONFIG=../cfg/readConfig
 
 CC=g++
 WARN=-Wall -Wformat=0
+OMPFLAGS=-fopenmp
 CFLAGS=$(WARN) -pedantic-errors -O3
 LDFLAGSSTD=-undefined dynamic_lookup
 LDFLAGSGDB=$(LDFLAGSSTD) -gdb
@@ -12,21 +13,17 @@ LDFLAGSGDB=$(LDFLAGSSTD) -gdb
 LDFLAGS=$(LDFLAGSSTD)
 #LDFLAGS=$(LDFLAGSGDB)
 
-#EXE=simOU
-#EXE=simSDDE
-EXE=simLorenz63
-
 all:$(EXE).out
 	mkdir -p ../results/simulation
 
 $(EXE).o:$(EXE).cpp
-	$(CC) -c $(CFLAGS) $(INCDIR) -o $@ $<
+	$(CC) $(OMPFLAGS) -c $(CFLAGS) $(INCDIR) -o $@ $<
 
 $(CONFIG).o:$(CONFIG).cpp
-	$(CC) -c $(CFLAGS) $(INCDIR) -o $@ $<
+	$(CC) $(OMPFLAGS) -c $(CFLAGS) $(INCDIR) -o $@ $<
 
 $(EXE).out:$(EXE).o $(CONFIG).o
-	$(CC) $(LDFLAGS) -o $@ $^ $(LIBDIR) $(LIBS)
+	$(CC) $(OMPFLAGS) $(LDFLAGS) -o $@ $^ $(LIBDIR) $(LIBS)
 
 clean:
 	rm -f $(EXE).o $(EXE).out
