--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -43,13 +43,13 @@ model:
 #	rho = 22.5;
 #	rho = 23.;
 #	rho = 23.5;
-	rho = 24.;
+#	rho = 24.;
 #	rho = 24.5;
 #	rho = 25.;
 #	rho = 25.5;
 #	rho = 26.;
 #	rho = 27.;
-#	rho = 28.;	
+	rho = 28.;	
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -139,8 +139,8 @@ spectrum:
 	tol = 1.e-15;
 	getForwardEigenvectors = true;
 #	getForwardEigenvectors =  false;
-#	getBackwardEigenvectors = true;
-	getBackwardEigenvectors = false;
+	getBackwardEigenvectors = true;
+#	getBackwardEigenvectors = false;
 	makeBiorthonormal = false;
 	nEigVecPlot = 1;
 	plotBackward = False
