Matrix market eigvec + plots

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -16,23 +16,6 @@ model:
 	# Dimension of the model (time series):
 	dim = 3;
 	# Field parameters
-#	rho = 0.;
-#	rho = 1.;
-#	rho = 2.;
-#	rho = 5.;
-#	rho = 7.5;
-#	rho = 10.;
-#	rho = 11.;
-#	rho = 12.;
-#	rho = 13.;
-#	rho = 13.5;
-#	rho = 13.75;
-#	rho = 14.;
-#	rho = 15.;
-#	rho = 16.;
-#	rho = 18.;
-#	rho = 19.;
-#	rho = 19.5;
 #	rho = 20.;
 #	rho = 20.5;
 #	rho = 21.;
@@ -40,16 +23,20 @@ model:
 #	rho = 21.5;
 #	rho = 21.75;
 #	rho = 22.;
-#	rho = 22.5;
+	rho = 22.5;
 #	rho = 23.;
 #	rho = 23.5;
 #	rho = 24.;
+#	rho = 24.1;
+#	rho = 24.2;
+#	rho = 24.3;
+#	rho = 24.4;
 #	rho = 24.5;
 #	rho = 25.;
 #	rho = 25.5;
 #	rho = 26.;
 #	rho = 27.;
-	rho = 28.;	
+#	rho = 28.;	
 	sigma = 10.;
 	beta = 2.6666666666666665;
 };
@@ -59,30 +46,33 @@ simulation:
 	# Initial constant state:
 	initState = [1., 1., 1.];
 	# Time series length without spinup
+#	LCut = 1.e3;
+#	LCut = 1.e4;
+#	LCut = 5.e4;
+	LCut = 1.e5;
+#	LCut = 5.e5;
 #	LCut = 1.e6;
-#	LCut = 1.e5;
-	LCut = 1.e3;
-#	LCut = 1.e-2;
 	# Spinup duration:
- 	spinup = 1.e3;
 # 	spinup = 0.;
+	spinup = 1.e3;
+# 	spinup = 1.e4;
 	# Time step of integration
 	dt = 1.e-4;
 #	dt = 1.e-5;
 	# Time step between prints
-	printStep = 1.e-2;
+	printStep = 5.e-2;
 };
 
 sprinkle:
 {
-	nTraj = 24;
+#	nTraj = 24;
 #	nTraj = 10000;
 #	nProc = 1;
 #	nTraj = 1000000000;
 #	nProc = 32;
 #	nTraj = 50000000;
 #	nTraj = 100000000;
-#	nTraj = 500000000;
+	nTraj = 500000000;
 #	nTraj = 1000000000;
 	nProc = 64;
 	#minInitState = [-20., -30., -0.001];
@@ -130,7 +120,7 @@ transfer:
 spectrum:
 {
 	# Number of eigenvalues to look for:
-#	nev = 50;
+#	nev = 10;
 #	nev = 100;
 #	nev = 150;
 	nev = 200;
@@ -155,10 +145,10 @@ stat:
 	tauPlot = 0.05
 #	tauPlot = 0.1
 	# Components to use as observables:
-	idxf = 0;
-	idxg = 0;
-#	idxf = 2;
-#	idxg = 2;
+#	idxf = 0;
+#	idxg = 0;
+	idxf = 2;
+	idxg = 2;
 	# Maximum lag used to calculate the correlation function:
 	lagMax = 10;
 	# Multi-taper window used to calculate periodograms:
