Transpose in simTransferSpectrum

--- a/cfg/Lorenz63.cfg
+++ b/cfg/Lorenz63.cfg
@@ -23,10 +23,10 @@ model:
 #	rho = 21.5;
 #	rho = 21.75;
 #	rho = 22.;
-	rho = 22.5;
+#	rho = 22.5;
 #	rho = 23.;
 #	rho = 23.5;
-#	rho = 24.;
+	rho = 24.;
 #	rho = 24.1;
 #	rho = 24.2;
 #	rho = 24.3;
@@ -66,15 +66,12 @@ simulation:
 sprinkle:
 {
 #	nTraj = 24;
-#	nTraj = 10000;
-#	nProc = 1;
-#	nTraj = 1000000000;
-#	nProc = 32;
-#	nTraj = 50000000;
+	nTraj = 10000;
+	nProc = 1;
 #	nTraj = 100000000;
-	nTraj = 500000000;
-#	nTraj = 1000000000;
-	nProc = 64;
+#	nTraj = 500000000;
+#	nProc = 32;
+#	nProc = 64;
 	#minInitState = [-20., -30., -0.001];
 	#maxInitState = [20., 30., 50.];
 	# Spherical coordinates
@@ -98,13 +95,11 @@ grid:
 	gridLimitsType = "fix";
 #	gridLimitsType = "std";
 	# Number of boxes in each direction:
-#	nx = [10, 5, 10];	    
-#	nx = [20, 20, 20];
-#	nx = [50, 50, 50];
+	nx = [10, 5, 10];	    
 #	nx = [100, 50, 100];
 #	nx = [200, 100, 200];
 #	nx = [300, 150, 300];
-	nx = [400, 200, 400];
+#	nx = [400, 200, 400];
 #	nx = [500, 250, 500];
 };
 
@@ -120,10 +115,10 @@ transfer:
 spectrum:
 {
 	# Number of eigenvalues to look for:
-#	nev = 10;
+	nev = 6;
 #	nev = 100;
 #	nev = 150;
-	nev = 200;
+#	nev = 200;
 #	nev = 300;
 	maxit = 1000;
 	tol = 1.e-15;
